package com.ejemplo.app.business.sagas.aplicacion.puerto.salida;

import com.ejemplo.app.business.ordermanager.dominio.OrdenId;
import com.ejemplo.app.business.sagas.dominio.sagasecundaria2.ComandoPasoSecundaria2;

/**
 * Servicio de la saga secundaria 2: el adaptador hace la llamada REST de
 * solicitud y retorna sin resultado. El servicio destino responde a posteriori
 * (puede tardar) publicando un evento en el topic Kafka de respuesta, que
 * consume ConsumidorRespuestaSecundaria2 e invoca
 * CasoUsoRegistrarRespuestaSecundaria2. El sagaId viaja en la solicitud como
 * clave de correlación.
 */
public interface PuertoSagaSecundaria2 {

    void solicitar(OrdenId sagaId, ComandoPasoSecundaria2.Solicitar cmd);
}
