@startuml 20-clases-aplicacion-saga-secundaria2
title Aplicación — saga secundaria 2: respuesta diferida por Kafka, aparcado de 3h y conciliación
!pragma layout smetana
hide empty members
skinparam classAttributeIconSize 0

package "business.sagas.aplicacion.puerto.entrada" {
  interface CasoUsoRegistrarRespuestaSecundaria2 {
    +respuestaOk(ordenId, ref)
  }
  note bottom of CasoUsoRegistrarRespuestaSecundaria2
    Entrada del consumer Kafka: el adaptador de entrada no toca el
    agregado ni RepositorioOrden directamente — pasa por aquí
    (regla de arquitectura del CLAUDE.md). El evento real solo trae
    éxito: no hay caso de error en el contrato.
  end note
}

interface "ProcesadorOrden (ver 17)" as Base

package "business.sagas.aplicacion.servicio.sagasecundaria2" {
  class ServicioSagaSecundaria2 <<@Service>> {
    {static} VENTANA_ESPERA = Duration.ofHours(3)
    -repo : RepositorioOrden
    -puerto : PuertoSagaSecundaria2
    -conciliacion : PuertoConciliacionSecundaria2
    -self : ServicioSagaSecundaria2  «proxy auto-inyectado, @Lazy\n(ver ConfiguracionSagas); establecerSelf(self)»
    +tipo() : TipoOrden  «SagaSecundaria2.TIPO»
    +ejecutarPaso(orden) : SenalPaso  «switch(saga.estado()):\nINICIAL->solicitar, ESPERANDO_RESPUESTA->conciliar,\nTERMINADA->self.aplicarFinalizacionYaResuelta»
    -solicitar(orden, saga) : SenalPaso  «puerto.solicitar (REST) +\nself.aplicarSolicitud(...) -> Aparcar(3h)»
    -conciliar(orden, saga) : SenalPaso  «conciliacion.consultar (REST):\nDisponible->self.aplicarConciliacionDisponible;\nSinResultado->self.aplicarConciliacionSinResultado;\nFalloRegistrado->throw ExcepcionServicioExterno»
    +aplicarSolicitud(orden, saga) : SenalPaso  «@Transactional»
    +aplicarConciliacionDisponible(orden, saga, ref) : SenalPaso  «@Transactional»
    +aplicarConciliacionSinResultado(orden, saga) : SenalPaso  «@Transactional»
    +aplicarFinalizacionYaResuelta(orden, saga) : SenalPaso  «@Transactional»
  }
  note right of ServicioSagaSecundaria2
    Nota de diseño: sin lease propio (no recibe Duration lease en el
    constructor) — HayMasTrabajo no se produce en esta saga: cada
    rama devuelve Aparcar o Finalizada, nunca continúa el bucle en la
    misma pasada. ejecutarPaso castea orden.proceso() a
    SagaSecundaria2 (agregado YA CARGADO por ServicioContinuarOrden,
    ver 17); cada rama llama a su self.aplicarX(...) -- vía el
    proxy auto-inyectado, para que @Transactional no se ignore por
    auto-invocación, incluida aplicarFinalizacionYaResuelta que no
    tiene REST previo -- y guarda esa misma instancia de OrdenRoot
    sin recargar: SagaSecundaria2 es un VO inmutable (ver 16), así
    que aplicarSolicitud/aplicarConciliacionDisponible hoistean un
    único var ahora = Instant.now() y hacen
    orden.reemplazarProceso(saga.solicitudEnviada() /
    saga.respuestaRecibida(ref), ahora) antes de aparcar(ventana, ahora)/
    finalizar(ahora); si otro actor escribió entre medias (consumer
    de Kafka, takeover), guardar falla por version.
  end note

  class ServicioRegistrarRespuestaSecundaria2 <<@Service>> {
    -repo : RepositorioOrden
    +respuestaOk(ordenId, ref)  «@Transactional: cargar (catch si ya\npurgada) + guard !estaViva()||terminada() +\norden.reemplazarProceso(saga.respuestaRecibida(ref), ahora) + orden.despertar(ahora)»
  }
  note bottom of ServicioRegistrarRespuestaSecundaria2
    @Transactional directamente en respuestaOk: se invoca cross-bean
    desde el consumer de Kafka, así que el proxy aplica sin necesidad
    de self. Castea orden.proceso() a SagaSecundaria2 y deja la saga
    en TERMINADA, solo despertando la orden: el cierre operativo
    final (orden.finalizar) lo hace
    ServicioSagaSecundaria2.aplicarFinalizacionYaResuelta() en la
    siguiente pasada del planificador — un único punto decide cuándo
    la orden queda finalizada. La idempotencia ante duplicados
    descansa en TERMINADA como estado absorbente (guard antes de
    escribir), no en deduplicación por mensajeId: si el contrato
    añadiera un caso de error habría que volver al patrón idempotent
    consumer (ver javadoc de la clase).
  end note
}

package "puerto.salida" {
  interface "RepositorioOrden\n(business.ordermanager — ver 17)" as RepositorioOrden
  interface PuertoSagaSecundaria2 {
    +solicitar(ordenId, cmd)  «REST; el ordenId viaja\ncomo clave de correlación»
  }
  interface PuertoConciliacionSecundaria2 {
    +consultar(ordenId, externalId) :\nDisponible(ref) | FalloRegistrado(motivo) | SinResultado()
  }
}

CasoUsoRegistrarRespuestaSecundaria2 <|.. ServicioRegistrarRespuestaSecundaria2
Base <|.. ServicioSagaSecundaria2
ServicioSagaSecundaria2 --> RepositorioOrden
ServicioSagaSecundaria2 --> PuertoSagaSecundaria2 : REST de solicitud
ServicioSagaSecundaria2 --> PuertoConciliacionSecundaria2 : REST de conciliación\nal vencer el aparcado
ServicioRegistrarRespuestaSecundaria2 --> RepositorioOrden
@enduml
